# rag-trust-lab

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  api.py  operator_app.py  pyproject.toml  render.yaml  requirements-api.txt  requirements-optional.txt  requirements.txt  streamlit_app.py
.github/: pull_request_template.md
.github/workflows/: ci.yml
configs/: basic.json  chroma.json  clova-basic-xjudge.json  clova-basic.json  clova-trusted-xjudge.json  clova-trusted.json  litellm-basic.json  litellm-trusted.json  retrieval-bm25.json  retrieval-dense.json  retrieval-hybrid.json  retrieval-lexical.json  trusted.json
data/: questions.json  retrieval_questions.json
data/docs/: current_policy.md  distractor_delivery_area.md  distractor_marketing_campaign.md  distractor_membership_tiers.md  distractor_mobile_app_release.md  distractor_server_maintenance.md  easylaw_internet_refund.md  easylaw_secondhand_transaction.md  kca_consumer_consultation_trends.md  kca_damage_relief_exclusions.md  (+29 more)
docs/: corpus_inventory.md  evaluation_set_design.md  project_notes.md  question_review_log.md  troubleshooting.md
rag_trust_lab/: __init__.py  cli.py  data.py  env.py  generator.py  judge.py  metrics.py  models.py  report.py  retriever.py  stats.py
reports/: clova-basic-xjudge.md  clova-trusted-xjudge.md  compare-basic-tradeoff-vs-trusted-tradeoff.md  compare-clova-basic-67-vs-clova-trusted-67.md  compare-clova-basic-xjudge-vs-clova-trusted-xjudge.md  latest-summary.md
scripts/: write_latest_summary.py
tests/: test_lab.py  test_stats.py
(+12 files in other folders)
