[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-trust-lab"
version = "0.1.0"
description = "A small RAG trust and regression evaluation lab"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
rag = [
  "langchain>=0.2",
  "langchain-community>=0.2",
  "langchain-chroma>=0.1",
  "chromadb>=0.5",
  "litellm>=1.40"
]
test = [
  "pytest>=8"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["rag_trust_lab*"]

[project.scripts]
rag-trust-lab = "rag_trust_lab.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
